@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/30/2016
+  * changed log messages of AtlasPTB to be compatible with bamboo
+
 * 1/27/2016
   * changed AtlasPTB to get messages from AtlasPJB
 
